Made the images responsive

--- a/block.html
+++ b/block.html
@@ -22,7 +22,7 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<img src="./images/bcIntro.jpg" alt="Blockchain Structure" style="height: 280px; padding-left: 100px;">
+								<img class="responsive" src="./images/bcIntro.jpg" alt="Blockchain Structure" style="height: 280px; padding-left: 100px;">
 								<h2>History of Blockchain</h2>
 									<ul>
 										<li>1991 : The research scientists Stuart Haber and W.Scott Stornetta presented a computationally practical solution for time stamping digital documents so that they could not be tampered.</li>
