--- a/eth.html
+++ b/eth.html
@@ -16,12 +16,12 @@
 
 					<div id="main">
                         <section id="content" class="main">
-							<img src="./images/network.png" alt="Ethereum network" style="padding-left: 80px;">
+							<img class="responsive" src="./images/network.png" alt="Ethereum network" style="padding-left: 80px;">
 							<p>Ethereum is an open source blockchain platform which allows anyone to develop and deploy blockchain based applications. Ethereum is built by the developers for the developers, it is a developers blockchain. Ethereum incorporated all blockchain functionalities in single network and avoided creation of individual blockchain for each purpose.</p>
 							
 							<h2>Development Stages</h2>
 							<p>The development of Ethereum was planned out in four stages, with significant modifications occurring in each stage. Sub releases known as "hard forks" that alter functionality in a non-backward compatible manner may be included in a stage.</p>
-							<img src="./images/history.jpeg" alt="EthereumHistory" class="history">
+							<img class="responsive" src="./images/history.jpeg" alt="EthereumHistory" class="history">
 							<br> <br>
 							<h2> Ethereum 2.0</h2>
                             <p>Ethereum 2.0 is a new version of Ethereum blockchain that will use proof of stake consensus algorithm to verify transactions via staking. <br>
