--- a/ethcomponent.html
+++ b/ethcomponent.html
@@ -17,7 +17,7 @@
 					<div id="main">
                         <section id="content" class="main">
 								<h2>Ethereum Nodes</h2>
-								<img class="Enode" src="./images/compnode.png" alt="Ethereum Nodes" >
+								<img class="responsive" class="Enode" src="./images/compnode.png" alt="Ethereum Nodes" >
 								<p>They are the peer-to-peer machines that link to form an Ethereum network.
 									Nodes communicate with one another in order to validate transactions and record data about the status of the blockchain. On the Ethereum network, these computers or servers are responsible for storing, validating, and trading data.	
 									Each node keeps its own copy of the blockchain and strives to verify that it matches the copies of all the other nodes. A new block is added based on whether or not the majority of nodes accept it.
@@ -47,7 +47,7 @@
 								</ul>
 
 								<h2>Ethereum Virtual Machine</h2>
-								<span ><img class="machine"  src="./images/machine.png" alt="EVM"/></span>
+								<span ><img class="responsive" class="machine"  src="./images/machine.png" alt="EVM"/></span>
 								<p>Ethereum is technically a globally decentralized general-purpose computer. It manages the deployment and execution of smart contracts. It is not only sandboxed but actually completely isolated, which means that code running inside the EVM has no access to network, filesystem or other processes. The Ethereum Virtual Machine’s instruction set is Turing-complete, allowing contracts deployed on the network to perform any task a regular computer program can do. However, this ability comes with a crucial caveat – some programs could take forever to execute. This results into  ‘the halting problem’ and puts the Ethereum network at risk of running a never-ending program. A program like this would completely stall the network, but luckily Ethereum has a clever way of dealing with this issue. 
                                 </p> <p> Using a concept known as ‘gas,’ the network demands a fee for its computation costs. After a certain maximum computation has been performed, the execution ends after the gas fueling the transaction is depleted, and the EVM halts the program. This means that the EVM is only a quasi-Turing complete machine – it runs any program you throw at it, but only if the program ends after using a certain amount of computational power.
                                 </p>
