modified:   block.html

--- a/eth.html
+++ b/eth.html
@@ -16,7 +16,7 @@
 
 					<div id="main">
                         <section id="content" class="main">
-							<img class="responsive" src="./images/network.png" alt="Ethereum network" style="padding-left: 80px;">
+							<img class="responsive" src="./images/network.png" alt="Ethereum network">
 							<p>Ethereum is an open source blockchain platform which allows anyone to develop and deploy blockchain based applications. Ethereum is built by the developers for the developers, it is a developers blockchain. Ethereum incorporated all blockchain functionalities in single network and avoided creation of individual blockchain for each purpose.</p>
 							
 							<h2>Development Stages</h2>
